force-app/main/default/objects/Program__c/fields/Exam_Month_year__c.field-meta.xml
<CustomField>
    <fullName>Exam_Month_year__c</fullName>
    <label>Exam Month / Year</label>
    <type>Date</type>
</CustomField>