force-app/main/default/objects/Program__c/fields/HSN_Code__c.field-meta.xml
<CustomField>
    <fullName>HSN_Code__c</fullName>
    <label>HSN Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>