force-app/main/default/objects/Program__c/fields/Keyword_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Keyword_Mapping__c</fullName>
    <label>Keyword Mapping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>