force-app/main/default/objects/Program__c/fields/Mode_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Delivery__c</fullName>
    <label>Mode of Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>