force-app/main/default/objects/Program__c/fields/No_Of_Installments__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Installments__c</fullName>
    <label>No Of Installments</label>
    <length>80</length>
    <type>Text</type>
</CustomField>