force-app/main/default/objects/Program__c/fields/Product_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Product_Weightage__c</fullName>
    <label>Product Weightage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>