force-app/main/default/objects/Program__c/fields/Program_Category__c.field-meta.xml
<CustomField>
    <fullName>Program_Category__c</fullName>
    <label>Program Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BGE</fullName>
            </value>
            <value>
                <fullName>PG</fullName>
            </value>
            <value>
                <fullName>UG</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>