force-app/main/default/objects/Program__c/fields/Send_Communication__c.field-meta.xml
<CustomField>
    <fullName>Send_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Communication</label>
    <type>Checkbox</type>
</CustomField>