force-app/main/default/objects/Program__c/listViews/Study_Abroad_Program.listView-meta.xml
<ListView>
    <fullName>Study_Abroad_Program</fullName>
    <columns>NAME</columns>
    <columns>Program_Category__c</columns>
    <columns>Status__c</columns>
    <columns>Variant_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Program_Category__c</field>
        <operation>equals</operation>
        <value>SA</value>
    </filters>
    <label>Study Abroad Program</label>
</ListView>