force-app/main/default/objects/Program__c/listViews/Undergraduate_programs.listView-meta.xml
<ListView>
    <fullName>Undergraduate_programs</fullName>
    <columns>NAME</columns>
    <columns>Program_Category__c</columns>
    <columns>Status__c</columns>
    <columns>Variant_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Program_Category__c</field>
        <operation>equals</operation>
        <value>UG</value>
    </filters>
    <label>Undergraduate programs</label>
</ListView>